# Hero

./: CMakeLists.txt  README.md
chassis_part/: .gitignore
chassis_part/MDK-ARM/: standard_robot.uvprojx  startup_stm32f407xx.lst
chassis_part/Src/: freertos.c  main.c  usbd_cdc_if.c
chassis_part/application/: CAN_receive.c  CAN_receive.h  INS_task.c  RM_Cilent_UI.c  UI_ProgressBar.c  UI_ProgressBar.h  UI_car.c  UI_car.h  UI_label.c  UI_label.h  User_Task.h  chassis_behaviour.c  chassis_power_control.c  chassis_task.c  chassis_task.h  detect_task.c  detect_task.h  gimbal_behaviour.c  gimbal_task.c  gimbal_task.h  referee.c  referee.h  remote_control.c  servo_task.c  shoot.c  shoot.h  test_task.c  user_task.c  vision.c  vision.h
chassis_part/bsp/boards/: bsp_fric.h
gimbal_part/MDK-ARM/: standard_robot.uvprojx  startup_stm32f407xx.lst
gimbal_part/Src/: freertos.c  gpio.c  main.c  tim.c
gimbal_part/application/: CAN_receive.c  CAN_receive.h  INS_task.c  RM_Cilent_UI.c  RM_Cilent_UI.h  User_Task.h  chassis_behaviour.c  chassis_behaviour.h  chassis_power_control.c  chassis_power_control.h  chassis_task.c  chassis_task.h  detect_task.c  detect_task.h  gimbal_behaviour.c  gimbal_behaviour.h  gimbal_task.c  gimbal_task.h  referee.c  referee.h  referee_send.h  remote_control.c  remote_control.h  servo_task.c  shoot.c  shoot.h  test_task.c  usb_task.c  usb_task.h  user_task.c  vision.c
gimbal_part/bsp/boards/: bsp_fric.h
gimbal_part/components/algorithm/: kalman_filter.h
gimbal_part/components/controller/: calculate.c  calculate.h
