cmake_minimum_required(VERSION 3.22)
project(2022_Hero C)

set(CMAKE_C_STANDARD 11)

include_directories(chassis_part/application)
include_directories(chassis_part/application/protocol)
include_directories(chassis_part/bsp/boards)
include_directories(chassis_part/components/algorithm)
include_directories(chassis_part/components/algorithm/Include)
include_directories(chassis_part/components/controller)
include_directories(chassis_part/components/devices)
include_directories(chassis_part/components/support)
include_directories(chassis_part/Drivers/CMSIS/Device/ST/STM32F4xx/Include)
include_directories(chassis_part/Drivers/CMSIS/Include)
include_directories(chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc)
include_directories(chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy)
include_directories(chassis_part/Inc)
include_directories(chassis_part/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc)
include_directories(chassis_part/Middlewares/ST/STM32_USB_Device_Library/Core/Inc)
include_directories(chassis_part/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS)
include_directories(chassis_part/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2)
include_directories(chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include)
include_directories(chassis_part/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F)
include_directories(chassis_part/Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM4F)

add_executable(2022_Hero
        chassis_part/application/protocol/protocol.h
        chassis_part/application/calibrate_task.c
        chassis_part/application/calibrate_task.h
        chassis_part/application/CAN_receive.c
        chassis_part/application/CAN_receive.h
        chassis_part/application/chassis_behaviour.c
        chassis_part/application/chassis_behaviour.h
        chassis_part/application/chassis_power_control.c
        chassis_part/application/chassis_power_control.h
        chassis_part/application/chassis_task.c
        chassis_part/application/chassis_task.h
        chassis_part/application/detect_task.c
        chassis_part/application/detect_task.h
        chassis_part/application/gimbal_behaviour.c
        chassis_part/application/gimbal_behaviour.h
        chassis_part/application/gimbal_task.c
        chassis_part/application/gimbal_task.h
        chassis_part/application/INS_task.c
        chassis_part/application/INS_task.h
        chassis_part/application/led_flow_task.c
        chassis_part/application/led_flow_task.h
        chassis_part/application/oled_task.c
        chassis_part/application/oled_task.h
        chassis_part/application/referee.c
        chassis_part/application/referee.h
        chassis_part/application/referee_send.c
        chassis_part/application/referee_send.h
        chassis_part/application/referee_usart_task.c
        chassis_part/application/referee_usart_task.h
        chassis_part/application/remote_control.c
        chassis_part/application/remote_control.h
        chassis_part/application/RM_Cilent_UI.c
        chassis_part/application/RM_Cilent_UI.h
        chassis_part/application/serial.c
        chassis_part/application/serial.h
        chassis_part/application/servo_task.c
        chassis_part/application/servo_task.h
        chassis_part/application/shoot.c
        chassis_part/application/shoot.h
        chassis_part/application/struct_typedef.h
        chassis_part/application/test_task.c
        chassis_part/application/test_task.h
        chassis_part/application/UI_car.c
        chassis_part/application/UI_car.h
        chassis_part/application/UI_label.c
        chassis_part/application/UI_label.h
        chassis_part/application/UI_ProgressBar.c
        chassis_part/application/UI_ProgressBar.h
        chassis_part/application/usb_task.c
        chassis_part/application/usb_task.h
        chassis_part/application/user_task.c
        chassis_part/application/User_Task.h
        chassis_part/application/vision.c
        chassis_part/application/vision.h
        chassis_part/application/voltage_task.c
        chassis_part/application/voltage_task.h
        chassis_part/bsp/boards/bsp_adc.c
        chassis_part/bsp/boards/bsp_adc.h
        chassis_part/bsp/boards/bsp_buzzer.c
        chassis_part/bsp/boards/bsp_buzzer.h
        chassis_part/bsp/boards/bsp_can.c
        chassis_part/bsp/boards/bsp_can.h
        chassis_part/bsp/boards/bsp_crc32.c
        chassis_part/bsp/boards/bsp_crc32.h
        chassis_part/bsp/boards/bsp_delay.c
        chassis_part/bsp/boards/bsp_delay.h
        chassis_part/bsp/boards/bsp_flash.c
        chassis_part/bsp/boards/bsp_flash.h
        chassis_part/bsp/boards/bsp_fric.c
        chassis_part/bsp/boards/bsp_fric.h
        chassis_part/bsp/boards/bsp_i2c.c
        chassis_part/bsp/boards/bsp_i2c.h
        chassis_part/bsp/boards/bsp_imu_pwm.c
        chassis_part/bsp/boards/bsp_imu_pwm.h
        chassis_part/bsp/boards/bsp_laser.c
        chassis_part/bsp/boards/bsp_laser.h
        chassis_part/bsp/boards/bsp_led.c
        chassis_part/bsp/boards/bsp_led.h
        chassis_part/bsp/boards/bsp_rc.c
        chassis_part/bsp/boards/bsp_rc.h
        chassis_part/bsp/boards/bsp_rng.c
        chassis_part/bsp/boards/bsp_rng.h
        chassis_part/bsp/boards/bsp_servo_pwm.c
        chassis_part/bsp/boards/bsp_servo_pwm.h
        chassis_part/bsp/boards/bsp_spi.c
        chassis_part/bsp/boards/bsp_spi.h
        chassis_part/bsp/boards/bsp_usart.c
        chassis_part/bsp/boards/bsp_usart.h
        chassis_part/components/algorithm/Include/arm_common_tables.h
        chassis_part/components/algorithm/Include/arm_const_structs.h
        chassis_part/components/algorithm/Include/arm_math.h
        chassis_part/components/algorithm/Include/core_sc000.h
        chassis_part/components/algorithm/Include/core_sc300.h
        chassis_part/components/algorithm/AHRS.h
        chassis_part/components/algorithm/AHRS_middleware.c
        chassis_part/components/algorithm/AHRS_middleware.h
        chassis_part/components/algorithm/kalman_filter.c
        chassis_part/components/algorithm/kalman_filter.h
        chassis_part/components/algorithm/user_lib.c
        chassis_part/components/algorithm/user_lib.h
        chassis_part/components/controller/pid.c
        chassis_part/components/controller/pid.h
        chassis_part/components/devices/BMI088driver.c
        chassis_part/components/devices/BMI088driver.h
        chassis_part/components/devices/BMI088Middleware.c
        chassis_part/components/devices/BMI088Middleware.h
        chassis_part/components/devices/BMI088reg.h
        chassis_part/components/devices/ist8310driver.c
        chassis_part/components/devices/ist8310driver.h
        chassis_part/components/devices/ist8310driver_middleware.c
        chassis_part/components/devices/ist8310driver_middleware.h
        chassis_part/components/devices/OLED.c
        chassis_part/components/devices/OLED.h
        chassis_part/components/devices/oledfont.h
        chassis_part/components/support/cpu_utils.c
        chassis_part/components/support/cpu_utils.h
        chassis_part/components/support/CRC8_CRC16.c
        chassis_part/components/support/CRC8_CRC16.h
        chassis_part/components/support/fifo.c
        chassis_part/components/support/fifo.h
        chassis_part/components/support/linux_list.h
        chassis_part/components/support/macro_mutex.h
        chassis_part/components/support/mem_mang.h
        chassis_part/components/support/mem_mang4.c
        chassis_part/Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f407xx.h
        chassis_part/Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
        chassis_part/Drivers/CMSIS/Device/ST/STM32F4xx/Include/system_stm32f4xx.h
        chassis_part/Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
        chassis_part/Drivers/CMSIS/Include/___cmsis_armcc.h
        chassis_part/Drivers/CMSIS/Include/cmsis_armcc.h
        chassis_part/Drivers/CMSIS/Include/cmsis_armclang.h
        chassis_part/Drivers/CMSIS/Include/cmsis_compiler.h
        chassis_part/Drivers/CMSIS/Include/cmsis_gcc.h
        chassis_part/Drivers/CMSIS/Include/cmsis_iccarm.h
        chassis_part/Drivers/CMSIS/Include/cmsis_version.h
        chassis_part/Drivers/CMSIS/Include/core_armv8mbl.h
        chassis_part/Drivers/CMSIS/Include/core_armv8mml.h
        chassis_part/Drivers/CMSIS/Include/core_cm0.h
        chassis_part/Drivers/CMSIS/Include/core_cm0plus.h
        chassis_part/Drivers/CMSIS/Include/core_cm1.h
        chassis_part/Drivers/CMSIS/Include/core_cm23.h
        chassis_part/Drivers/CMSIS/Include/core_cm3.h
        chassis_part/Drivers/CMSIS/Include/core_cm33.h
        chassis_part/Drivers/CMSIS/Include/core_cm4.h
        chassis_part/Drivers/CMSIS/Include/core_cm7.h
        chassis_part/Drivers/CMSIS/Include/core_sc000.h
        chassis_part/Drivers/CMSIS/Include/core_sc300.h
        chassis_part/Drivers/CMSIS/Include/mpu_armv7.h
        chassis_part/Drivers/CMSIS/Include/mpu_armv8.h
        chassis_part/Drivers/CMSIS/Include/tz_context.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_adc.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_adc_ex.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_can.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cortex.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_crc.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_def.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma_ex.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_exti.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ex.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ramfunc.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio_ex.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2c.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2c_ex.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pcd.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pcd_ex.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr_ex.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc_ex.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rng.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rtc.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rtc_ex.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_spi.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim_ex.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_usb.h
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc_ex.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_can.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_crc.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma_ex.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_exti.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ex.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ramfunc.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_gpio.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c_ex.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd_ex.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr_ex.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rng.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc_ex.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_spi.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c
        chassis_part/Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_usb.c
        chassis_part/Inc/adc.h
        chassis_part/Inc/can.h
        chassis_part/Inc/crc.h
        chassis_part/Inc/dma.h
        chassis_part/Inc/FreeRTOSConfig.h
        chassis_part/Inc/gpio.h
        chassis_part/Inc/i2c.h
        chassis_part/Inc/main.h
        chassis_part/Inc/rng.h
        chassis_part/Inc/rtc.h
        chassis_part/Inc/spi.h
        chassis_part/Inc/stm32f4xx_hal_conf.h
        chassis_part/Inc/stm32f4xx_it.h
        chassis_part/Inc/tim.h
        chassis_part/Inc/usart.h
        chassis_part/Inc/usb_device.h
        chassis_part/Inc/usbd_cdc_if.h
        chassis_part/Inc/usbd_conf.h
        chassis_part/Inc/usbd_desc.h
        chassis_part/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc/usbd_cdc.h
        chassis_part/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/usbd_cdc.c
        chassis_part/Middlewares/ST/STM32_USB_Device_Library/Core/Inc/usbd_core.h
        chassis_part/Middlewares/ST/STM32_USB_Device_Library/Core/Inc/usbd_ctlreq.h
        chassis_part/Middlewares/ST/STM32_USB_Device_Library/Core/Inc/usbd_def.h
        chassis_part/Middlewares/ST/STM32_USB_Device_Library/Core/Inc/usbd_ioreq.h
        chassis_part/Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_core.c
        chassis_part/Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_ctlreq.c
        chassis_part/Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_ioreq.c
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/cmsis_os.c
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/cmsis_os.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/cmsis_os.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/cmsis_os2.c
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/cmsis_os2.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/croutine.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/deprecated_definitions.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/event_groups.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/FreeRTOS.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/list.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/message_buffer.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/mpu_prototypes.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/mpu_wrappers.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/portable.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/projdefs.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/queue.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/semphr.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/stack_macros.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/StackMacros.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/stream_buffer.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/task.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/include/timers.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/port.c
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/portmacro.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/heap_4.c
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM4F/port.c
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM4F/portmacro.h
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/croutine.c
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/event_groups.c
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/list.c
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/queue.c
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/stream_buffer.c
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/tasks.c
        chassis_part/Middlewares/Third_Party/FreeRTOS/Source/timers.c
        chassis_part/Src/adc.c
        chassis_part/Src/can.c
        chassis_part/Src/crc.c
        chassis_part/Src/dma.c
        chassis_part/Src/freertos.c
        chassis_part/Src/gpio.c
        chassis_part/Src/i2c.c
        chassis_part/Src/main.c
        chassis_part/Src/rng.c
        chassis_part/Src/rtc.c
        chassis_part/Src/spi.c
        chassis_part/Src/stm32f4xx_hal_msp.c
        chassis_part/Src/stm32f4xx_it.c
        chassis_part/Src/system_stm32f4xx.c
        chassis_part/Src/tim.c
        chassis_part/Src/usart.c
        chassis_part/Src/usb_device.c
        chassis_part/Src/usb_otg.c
        chassis_part/Src/usbd_cdc_if.c
        chassis_part/Src/usbd_conf.c
        chassis_part/Src/usbd_desc.c)
